# databank

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mise.toml  pyproject.toml
.github/workflows/: main.yml
databank/: __init__.py  core.py  query.py  utils.py
tests/: queries.sql  test_core.py  test_query.py  test_utils.py
