[project]
name = "databank"
version = "1.0.0"
description = "Databank is an easy-to-use Python library for making raw SQL queries in a multi-threaded environment."
authors = [{ name = "snapADDY GmbH", email = "info@snapaddy.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = ["sqlalchemy>=2.0.4"]

[project.optional-dependencies]
asyncio = ["greenlet>=1"]

[dependency-groups]
dev = [
    "pytest>=7.2.1",
    "pre-commit>=3.3.3",
    "ruff>=0.5.3",
    "aiosqlite>=0.21.0",
    "pytest-asyncio>=0.26.0",
    "psycopg>=3.2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 99

[tool.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
