[project]
name = "databank"
version = "1.1.0"
description = "Databank is an easy-to-use Python library for making raw SQL queries in a multi-threaded environment."
authors = [{ name = "snapADDY GmbH", email = "info@snapaddy.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = ["sqlalchemy>=2.0.4"]

[project.optional-dependencies]
asyncio = ["greenlet>=1"]

[dependency-groups]
dev = [
    "pytest>=7.2.1",
    "pre-commit>=3.3.3",
    "ruff>=0.5.3",
    "aiosqlite>=0.21.0",
    "pytest-asyncio>=0.26.0",
    "psycopg-binary>=3.2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 99

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # Module imported but unused
]
"test_*.py" = [
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D400", # First line should end with a period
    "D401", # First line should be in imperative mood
    "E501", # Line too long
    "S101", # Use of assert detected
]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "YTT", # flake8-2020
    "FBT", # flake8-boolean-trap
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie
    "PYI", # flake8-pyi
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "I",   # isort
    "NPY", # NumPy-specific rules
    "N",   # pep8-naming
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "D",   # pydocstyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "E402",   # Module level import not at top of file
    "ISC001", # Implicit string concatenation
    "N803",   # Argument name should be lowercase
    "N806",   # Variable in function should be lowercase
    "RUF002", # Docstring contains ambiguous character
    "RUF003", # Comment contains ambiguous character
    "RUF001", # String contains ambiguous character
    "S608",   # Possible SQL injection vector through string-based query construction
    "S110",   # Consider logging the exception before pass
    "S112",   # Consider logging the exception before continue
    "S105",   # Possible hardcoded password
    "S311",   # Standard pseudo-random generators are not suitable for cryptographic purposes
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
